Rotas e Páginas Dinâmicas

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -6,5 +6,7 @@
 </head>
 <body>
       <h1>FakePinterest - Meu primeiro site no ar!</h1>
+
+      <p>Esta é a homepage do site</p>
 </body>
 </html>
