--- a/templates/perfil.html
+++ b/templates/perfil.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <title>Perfil - FakePinterest</title>
 </head>
 <body>
-    <h1>Perfil do usuário: Sivaldo</h1>
+    <h1>Perfil do usuário: {{ usuario }}</h1>
+
+    <!--link que liga essa pagina a outra-->
+    <a href="{{ url_for('homepage') }}">Sair</a>
 </body>
 </html>
