Implementar funcionalidades de Login e Criar Conta

--- a/fakepinterest/templates/homepage.html
+++ b/fakepinterest/templates/homepage.html
@@ -18,7 +18,7 @@
       <!--Post = enviar, fazer mesma coisa routes-->
       {% block formulario %}
       <form method="POST">
-          {{ form.csrf_token }}   <!--form-> esta no routes-->
+          {{ form.csrf_token }}
 
           {{ form.email.label() }}
           {{ form.email() }}
